--- a/source/sass/blocks/recommended.scss
+++ b/source/sass/blocks/recommended.scss
@@ -80,7 +80,7 @@
 
 .recommended__substrate {
   width: calc(100% / 3);
-  height: 100vh;
+  height: 1px;
 
   background-color: v.$light-scheme-color;
 }
